# test_cash_machine

./: README.md
.github/workflows/: git-workflow.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini
backend/cash_machine/: manage.py
backend/cash_machine/api/: apps.py  decorators.py  serializers.py  urls.py  views.py
backend/cash_machine/api/templates/: receipt.html
backend/cash_machine/cash_machine/: asgi.py  settings.py  urls.py  wsgi.py
backend/cash_machine/checks/: admin.py
backend/cash_machine/checks/migrations/: 0001_initial.py
backend/cash_machine/receipts/: admin.py  apps.py  models.py
backend/cash_machine/receipts/migrations/: 0001_initial.py
backend/cash_machine/templates/: receipt.html
backend/cash_machine/tests/: test_api.py  test_models.py  test_urls.py
backend/tests/: test_models.py
docker/: docker-compose.yml
docker/nginx/: nginx.conf
docker_local/: docker-compose.yml
